--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -29,7 +29,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+    <div id="root" class="py-5"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
